update tyler logo

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+<div class="ui top menu">
+  <div class="item">
+    <img src="tjgcroppedlogo3.png">
+  </div>
+</div>
+<div class="ui bottom fixed menu">
+
+  <a class="item" href="https://www.tylergasperlin.com/">Sample React App by Tyler Gasperlin</a>
+</div>
+<p></p>
+<p></p>
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
